crates/pcb-zen-core/tests/snapshots/assert__check_false_should_error.snap
---
source: crates/pcb-zen-core/tests/assert.rs
expression: output
---
Error: test.zen:6:1-34 failing condition
