crates/pcb-zen-core/tests/snapshots/assert__check_true_should_pass.snap
---
source: crates/pcb-zen-core/tests/assert.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
