crates/pcb-zen-core/tests/snapshots/assert__warn_function_continues_execution.snap
---
source: crates/pcb-zen-core/tests/assert.rs
expression: output
---
Warning: test.zen:5:1-24 warning message
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
