crates/pcb-zen-core/tests/snapshots/assert__warn_function_multiple_warnings.snap
---
source: crates/pcb-zen-core/tests/assert.rs
expression: output
---
Warning: test.zen:5:1-22 first warning
Warning: test.zen:6:1-23 second warning
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
