crates/pcb-zen-core/tests/snapshots/assert__warn_function_should_warn.snap
---
source: crates/pcb-zen-core/tests/assert.rs
expression: output
---
Warning: test.zen:5:1-26 this is a warning
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
